<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.registerUser.RegisterUserActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="24dp"
            android:hint="@string/username_hint"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" android:hint="@string/email_hint"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:hint="@string/password_hint"
    />
    <Button
            android:text="@string/title_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/butRegister" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            style="@style/MyButtonStyle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHaveAccount" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/butRegister" android:text="@string/msg_already_account"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorWhite"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/rounded_rectangle_button"
            android:id="@+id/ivPhoto" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSelectPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivPhoto" app:layout_constraintBottom_toBottomOf="@+id/ivPhoto"
            app:layout_constraintStart_toStartOf="@+id/ivPhoto"
            app:layout_constraintEnd_toEndOf="@+id/ivPhoto" android:text="@string/msg_select_photo"
            android:textColor="@color/colorWhite" android:textSize="18sp"/>

</android.support.constraint.ConstraintLayout>