<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.LoginActivity" android:background="@color/colorPrimary">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailLogin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:hint="@string/email_hint"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPasswordLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editEmailLogin" android:hint="@string/password_hint"
    />
    <Button
            android:text="@string/title_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/butLogin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordLogin"
            style="@style/MyButtonStyle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHaveAccount" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/butLogin" android:text="@string/msg_already_account"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>